# cask.rs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Cask.toml  Cask.toml.md  Cross.toml  DESIGN.md  LICENSE  Makefile  README-zh-CN.md  README.md  install.ps1  install.sh
 fixtures/config/: default_Cask.toml
.cargo/: config.toml
.github/workflows/: build.yml  ci.yml  installation.yml  lint.yml  test.yml
crates/downloader/: Cargo.toml  lib.rs  rustls.rs
crates/extractor/: Cargo.toml  archive.rs  tbz2.rs  zip.rs
crates/extractor/fixtures/tar/: 00.tar
crates/extractor/fixtures/tbz2/: 01.tar.bz2  02.tar.bz2
crates/extractor/fixtures/tgz/: 02.tgz
crates/git/: lib.rs
fixtures/.cask/formula/a/: Cask.toml
fixtures/.cask/formula/f8aa04fa7332a88e0c1433ace2683b9f1e445727815428d9ffd18541db45b9fc/: Cask.toml
fixtures/config/: default_Cask.toml  hook_Cask.toml  simple_Cask.toml
fixtures/extractor/: .gitignore  sub-folder.tar  test.tar  test_1.tar  test_tar.tar
fixtures/symlink/dest/: .gitignore
lib/downloader/: Cargo.toml  lib.rs
lib/extractor/: Cargo.toml  archive.rs  lib.rs  tar.rs  tbz2.rs  tgz.rs  zip.rs
lib/extractor/fixtures/: .gitignore  cross-env_darwin_amd64.tgz
lib/extractor/fixtures/tar/: 01.tar
lib/extractor/fixtures/tgz/: 01.tgz
lib/git/: Cargo.toml  lib.rs  repository.rs
lib/shell/: Cargo.toml  lib.rs
src/: cask.rs  command_build_in_list.rs  command_check_updates.rs  command_clean.rs  command_homepage.rs  command_info.rs  command_install.rs  command_list.rs  command_relink.rs  command_remote_list.rs  command_remote_sync.rs  command_search.rs  command_self_uninstall.rs  command_self_update.rs  command_sync.rs  command_uninstall.rs  command_update.rs  command_upgrade.rs  config.rs  download.rs  downloader.rs  exe.bat  extractor.rs  formula.rs  git.rs  hooker.rs  main.rs  shell.rs  symlink.rs  util.rs
src/script/: exe.bat  exe.sh
