[package]
name = "cask"
version = "0.4.13"
authors = ["Axetroy <axetroy.dev@gmail.com>"]
readme = "README.md"
keywords = ["cask", "distributed", "binary", "package", "manager"]
repository = "https://github.com/cask-pkg/cask.rs"
description = """
General distributed binary distribution package management, written in Rust.
"""

edition = "2021"

[[bin]]
name = "cask"
path = "src/main.rs"

[workspace]
resolver = "2"
members = ["crates/extractor", "crates/downloader", "crates/git", "crates/shell"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.9", features = ["cargo"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
eyre = "0.6.8"
toml = "0.8.13"
futures = "0.3.21"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4.38", features = ["unstable-locales"]}
tinytemplate = "1.1"
dirs = "5.0.1"
sha2 = "0.10.6"
url = "2.3.1"
semver = "1.0.23"
tabled = "0.15.0"
atty = "0.2.14"
which = "6.0.1"
opener = "0.7.1"
is_executable = "1.0.1"
time = "0.3.36"
extractor = { path = "./crates/extractor" }
downloader = { path = "./crates/downloader", default-features = false }
shell = { path = "./crates/shell" }
git = { path = "./crates/git" }

[profile.release]
# https://github.com/johnthagen/min-sized-rust
strip = true      # Automatically strip symbols from the binary.
opt-level = "z"   # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"

[features]
default = ["rustls"]
# This feature allows us to use rustls only on architectures supported by ring.
# See also https://github.com/briansmith/ring/issues/1182
# and https://github.com/briansmith/ring/issues/562
# and https://github.com/briansmith/ring/issues/1367
rustls = ["downloader/rustls"]
openssl = ["downloader/openssl"]
