[package]
name = "downloader"
version = "0.1.0"
edition = "2021"

[lib]
path = "lib.rs"

[dependencies]
eyre = "0.6.8"
reqwest = { version = "0.12.5", default-features = false, features = ["stream"] }
futures-util = "0.3.21"
indicatif = "0.17.8"
tokio = { version = "1", features = ["full"] }

[features]
default = ["rustls"]
# This feature allows us to use rustls only on architectures supported by ring.
# See also https://github.com/briansmith/ring/issues/1182
# and https://github.com/briansmith/ring/issues/562
# and https://github.com/briansmith/ring/issues/1367
rustls = ["reqwest/rustls-tls"]
openssl = []
